--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "mtownsend/response-xml": "^2.2"
+        "mtownsend/response-xml": "^2.2",
+        "spatie/laravel-responsecache": "^7.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
