Update docs and example env

--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=mysql       # mysql for container instance, 127.0.0.1 for local
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_USERNAME=sail        # sail for container instance, root for local
+DB_PASSWORD=password    # password for container instance, empty for local
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
